force-app/main/default/objects/Event__c/fields/Event_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Event_Revenue__c</fullName>
    <label>Event Revenue</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>