force-app/main/default/objects/Event__c/fields/Max_Attendee_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Attendee_Capacity__c</fullName>
    <label>Max Attendee Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>