force-app/main/default/objects/Event__c/fields/Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level__c</fullName>
    <label>Sponsorship Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sponsored</fullName>
            </value>
            <value>
                <fullName>Partially Sponsored</fullName>
            </value>
            <value>
                <fullName>Fully Sponsored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>