force-app/main/default/objects/Event__c/validationRules/CapacityLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>CapacityLimit</fullName>
    <active>true</active>
    <description>Capacity limit must be greater than zero</description>
    <errorConditionFormula>Max_Attendee_Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Max_Attendee_Capacity__c</errorDisplayField>
    <errorMessage>Maximum attendee capacity must be greater than zero</errorMessage>
</ValidationRule>