force-app/main/default/objects/Event__c/validationRules/PreventRegistration.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventRegistration</fullName>
    <active>false</active>
    <description>Cannot register after the event is mark as completed</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Completed&quot;) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot reopen a completed event</errorMessage>
</ValidationRule>