force-app/main/default/objects/Event__c/validationRules/VerifyDateEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>VerifyDateEntry</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Start_Date__c &gt;  Event_End_Date__c</errorConditionFormula>
    <errorDisplayField>Event_End_Date__c</errorDisplayField>
    <errorMessage>End Date should be after Start Date</errorMessage>
</ValidationRule>