force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_Budget__c</columns>
    <columns>Event_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>